--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -4,63 +4,50 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :sunday_open %><br />
+    <%= f.label :sunday_open %>
     <%= f.time_select :sunday_open %>
-  </p>
-  <p>
-    <%= f.label :sunday_close %><br />
+
+    <%= f.label :sunday_close %>
     <%= f.time_select :sunday_close %>
   </p>
   <p>
-    <%= f.label :monday_open %><br />
+    <%= f.label :monday_open %>
     <%= f.time_select :monday_open %>
-  </p>
-  <p>
-    <%= f.label :monday_close %><br />
+    <%= f.label :monday_close %>
     <%= f.time_select :monday_close %>
   </p>
   <p>
-    <%= f.label :tuesday_open %><br />
+    <%= f.label :tuesday_open %>
     <%= f.time_select :tuesday_open %>
-  </p>
-  <p>
-    <%= f.label :tuesday_close %><br />
+    <%= f.label :tuesday_close %>
     <%= f.time_select :tuesday_close %>
   </p>
   <p>
-    <%= f.label :wednesday_open %><br />
+    <%= f.label :wednesday_open %>
     <%= f.time_select :wednesday_open %>
-  </p>
-  <p>
-    <%= f.label :wednesday_close %><br />
+    <%= f.label :wednesday_close %>
     <%= f.time_select :wednesday_close %>
   </p>
   <p>
-    <%= f.label :thursday_open %><br />
+    <%= f.label :thursday_open %>
     <%= f.time_select :thursday_open %>
-  </p>
-  <p>
-    <%= f.label :thursday_close %><br />
+    <%= f.label :thursday_close %>
     <%= f.time_select :thursday_close %>
   </p>
   <p>
-    <%= f.label :friday_open %><br />
+    <%= f.label :friday_open %>
     <%= f.time_select :friday_open %>
-  </p>
-  <p>
-    <%= f.label :friday_close %><br />
+    <%= f.label :friday_close %>
     <%= f.time_select :friday_close %>
   </p>
   <p>
-    <%= f.label :saturday_open %><br />
+    <%= f.label :saturday_open %>
     <%= f.time_select :saturday_open %>
-  </p>
-  <p>
-    <%= f.label :saturday_close %><br />
+    <%= f.label :saturday_close %>
     <%= f.time_select :saturday_close %>
   </p>
   <p>
-    <%= f.label :holidays %><br />
+    <%= f.label :holidays, 'open on holidays?' %>
     <%= f.check_box :holidays %>
   </p>
   <p>
