--- a/app/views/website_uses/index.html.erb
+++ b/app/views/website_uses/index.html.erb
@@ -11,7 +11,7 @@
   <tr>
     <td><%=h website_use.target_type %></td>
     <td><%= link_to_name website_use.target %></td>
-    <td><%=h website_use.website.name %></td>
+    <td><%= link_to_name website_use.website, 'href' %></td>
     <td><%= link_to 'show', website_use %></td>
     <td><%= link_to 'edit', edit_website_use_path(website_use) %></td>
   </tr>
