--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,12 +1,18 @@
   <%= primary_image @brand %>
-  <%=h @brand.name %>
+<h1>  <%=h @brand.name %>  </h1>
   <%=h @brand.phone %><br>
   <%= attach_image_link @brand %>
   <%= @brand.products.count %> products<br>
   <%= lists @brand %>
 
   <%= attachable_sites @brand %>
-<%= link_to 'edit', edit_brand_path(@brand) %> |
 <%= link_to 'brands', brands_path %>
 <%= link_to_backup %>
 <%= follow_link @brand %>
+<br>
+<%= link_to "new product for #{@brand.name}", new_brand_product_path(@brand) %>
+<br>
+<h2>crafted by <%= @brand.name %></h2>
+<% @brand.products.each do |p| %>
+	<%= link_to_name p %><br>
+<% end %>
