--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -4,14 +4,17 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name %>    <%= f.label :name, 'product name' %>
   </p>
-  <p>
-    <%= f.label :brand_id %><br />
-    <%= f.select :brand_id, Brand.map_name_and_id %>
-    <%= link_to 'add a brand', new_brand_path %>
-  </p>
+	<% unless @product.brand %>
+	  <p>
+	    <%= f.select :brand_id, Brand.map_name_and_id, :include_blank => true %>    <%= f.label :brand_id, 'select brand or enter here' %>
+	    <%= text_field :brand, :name %>
+	  </p>
+	<% else %>
+	  <%= link_to_name @product.brand %>
+	  <%= f.hidden_field :brand_id %>
+	<% end %>
   <p>
     <%= f.submit :'ready for consumption' %>
   </p>
