work on views and notifications

--- a/app/views/delivered_notices/show.html.erb
+++ b/app/views/delivered_notices/show.html.erb
@@ -1,33 +1,14 @@
+<%= link_to_name @delivered_notice.notice, 'body' %>
 <p>
-  <b>Notice:</b>
-  <%=h @delivered_notice.notice_id %>
+  <%= link_to_name @delivered_notice.user %> has been notified.
 </p>
 
-<p>
-  <b>User:</b>
-  <%=h @delivered_notice.user_id %>
-</p>
+<%=h @delivered_notice.read_at ? 'read ' + time_ago_in_words(@delivered_notice.read_at) + ' ago' : 'not read yet' %>
+
+<%= @delivered_notice.dismissed_at ? 'and dismissed' : '' %>
 
 <p>
-  <b>Read at:</b>
-  <%=h @delivered_notice.read_at %>
-</p>
-
-<p>
-  <b>Dismissed at:</b>
-  <%=h @delivered_notice.dismissed_at %>
-</p>
-
-<p>
-  <b>Created at:</b>
   <%=h @delivered_notice.created_at %>
 </p>
 
-<p>
-  <b>Updated at:</b>
-  <%=h @delivered_notice.updated_at %>
-</p>
-
-
-<%= link_to 'Edit', edit_delivered_notice_path(@delivered_notice) %> |
-<%= link_to 'Back', delivered_notices_path %>
+<%= link_to_backup %>
