--- a/app/views/credit_cards/show.html.erb
+++ b/app/views/credit_cards/show.html.erb
@@ -1,4 +1,4 @@
-  <%=h @credit_card.card_number[-4..-1] %><br>
+  <%=h @credit_card.last_four %><br>
   <%=h @credit_card.address.display %>
 
   <%=h @credit_card.expiration_month %>/
