--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -2,27 +2,26 @@
 
 <% form_for(@credit_card) do |f| %>
   <%= f.error_messages %>
-
+cc
   <p>
-    <%= f.label :address_id %><br />
-    <%= f.select :address_id, Address.map_name_and_id %>
+    <%= f.select :address_id, Address.map_name_and_id %><%= f.label :address_id, 'select address or' %>
+		<%= link_to 'enter new address', new_address_path %>
   </p>
   <p>
-    <%= f.label :card_number %><br />
-    <%= f.text_field :card_number %>
+    <%= f.text_field :card_number, :size => 19 %>    <%= f.label :card_number, 'card number' %>
   </p>
   <p>
-    <%= f.label :expiration_month %><br />
-    <%= f.text_field :expiration_month, :length => 2 %>
+    <%= f.text_field :expiration_month, :size => 2 %>    <%= f.label :expiration_month, 'expiration month (MM)' %>
   </p>
   <p>
-    <%= f.label :expiration_year %><br />
-    <%= f.text_field :expiration_year, :length => 2 %>
+    <%= f.text_field :expiration_year, :size => 2 %>    <%= f.label :expiration_year, 'expiration year (YY)' %>
   </p>
   <p>
-    <%= f.label :security_code %><br />
-    <%= f.text_field :security_code, :length => 6 %>
+    <%= f.text_field :security_code, :size => 6 %>    <%= f.label :security_code, 'security code' %>
   </p>
+	<p>
+		<%= f.text_field :name %><%= f.label :name, 'and a name for this card' %>
+	</p>
   <p>
     <%= f.submit :empower %>
   </p>
