--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -4,16 +4,15 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name %>    <%= f.label :name, 'network name' %>
   </p>
   <p>
-    <%= f.label :city_id %><br />
-    <%= f.select :city_id, City.map_name_and_id %>
+    <%= f.select :city_id, City.map_name_and_id, :include_blank => true %>    <%= f.label :city_id, 'city' %>
+		<%= link_to 'another city', new_city_path %>
   </p>
   <p>
-    <%= f.label :state_id %><br />
-    <%= f.select :state_id, State.map_name_and_id %>
+    <%= f.select :state_id, State.map_name_and_id, :include_blank => true %>    <%= f.label :state_id, 'state' %>
+		<%= link_to 'another state', new_state_path %>
   </p>
   <p>
     <%= f.submit :special %>
