--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing notices</h1>
+<h1>notices</h1>
 
 <table>
   <tr>
@@ -9,8 +9,7 @@
     <th>Secondary targets</th>
     <th>User</th>
     <th>Private</th>
-    <th>Created at</th>
-    <th>Updated at</th>
+    <th>age</th>
   </tr>
 
 <% for notice in @notices %>
@@ -22,14 +21,13 @@
     <td><%=h notice.secondary_targets %></td>
     <td><%= link_to_name notice.user %></td>
     <td><%=h notice.private %></td>
-    <td><%=h notice.created_at %></td>
-    <td><%=h notice.updated_at %></td>
-    <td><%= link_to 'Show', notice %></td>
-    <td><%= link_to 'Edit', edit_notice_path(notice) %></td>
+    <td><%= time_ago_in_words notice.created_at %></td>
+    <td><%= link_to 'show', notice %></td>
+    <td><%= link_to 'edit', edit_notice_path(notice) %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New notice', new_notice_path %>
+<%= link_to 'new notice', new_notice_path %>
