--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -3,24 +3,21 @@
 <table>
   <tr>
     <th>User</th>
-    <th>Offering</th>
-    <th>Credit card</th>
-    <th>Address</th>
+    <th>purchased</th>
+    <th>shipping address</th>
     <th>Approved</th>
     <th>Complete</th>
   </tr>
 
 <% for purchase in @purchases %>
   <tr>
-    <td><%= link_to purchase.user.name, purchase.user %></td>
-    <td><%= link_to purchase.offering.product.name, purchase.product.offering %> from <%= link_to purchase.offering.location.store.name, purchase.offering.location.store %></td>
-    <td><%=h purchase.credit_card_id %></td>
-    <td><%=h purchase.address_id %></td>
+    <td><%= link_to_name purchase.user %></td>
+    <td><%= link_to_name purchase.offering.product %> from <%= link_to_name purchase.offering.location %></td>
+    <td><%= link_to_name purchase.address %></td>
     <td><%=h purchase.approved %></td>
     <td><%=h purchase.complete %></td>
     <td><%= link_to 'show', purchase %></td>
     <td><%= link_to 'edit', edit_purchase_path(purchase) %></td>
-    <td><%= link_to 'Destroy', purchase, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
