--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,4 +1,4 @@
-<% form_remote_tag :url => 'search/' + model.pluralize, :update => 'results', :position => :top do %>
-  <%= text_field_tag :query %>search
+<% form_remote_tag :url => 'search/' + model.pluralize, :update => 'results', :position => :top, :html => {:id => 'search'} do %>
+  search<%= text_field_tag :query %>
 <% end %>
 <div id='results'></div>
