--- a/app/views/authorizations/show.html.erb
+++ b/app/views/authorizations/show.html.erb
@@ -1,23 +1,6 @@
-<p>
-  <b>User:</b>
-  <%=h @authorization.user_id %>
-</p>
 
-<p>
-  <b>Authorization type:</b>
-  <%=h @authorization.authorization_type %>
-</p>
+  <%= link_to_name @authorization.user, 'login' %> is authorized to 
+  <%= Authorization.type_hash[@authorization.authorization_type] %> at 
+  <%= link_to_name @authorization.target %><br>
 
-<p>
-  <b>Target type:</b>
-  <%=h @authorization.target_type %>
-</p>
-
-<p>
-  <b>Target:</b>
-  <%=h @authorization.target_id %>
-</p>
-
-
-<%= link_to 'Edit', edit_authorization_path(@authorization) %> |
-<%= link_to 'Back', authorizations_path %>
+<%= link_to 'edit', edit_authorization_path(@authorization) if logged_in? && current_user.id == @authorization.authorizer_id %>
