--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,10 @@
     <%= @map.to_html if @map %>
   </head>
   <body>
+		<%= link_to_backup %>
     <%= login_stuff %>
     <%= render :partial => 'shared/search_form', :locals => {:model => controller.controller_name} if searchable_models.include?(controller.controller_name) %>
+
     <div id='left_nav'>
       <% [%w[address_uses addresses brands cities comments credit_cards], %w[followings groups image_uses images listings locations], %w[ memberships messages network_memberships networks offerings prices products], %w[ purchases schedules states stores taggings tags users website_uses websites phones phone_uses authorizations notices delivered_notices]].each do |set| %>
         <% set.each do |resource| %>
