--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,16 +1,19 @@
-<%=h @store.name %>  administered by <%= link_to_name @store.administrator %><br>
-<%= image_tag @store.primary_photo.public_filename  if @store.primary_photo %><br>
+<h1><%=h @store.name %></h1>
+<%= follow_link @store %><br>
+<%= link_to 'stores', stores_path %>
+<%= image_tag @store.primary_photo.public_filename if @store.primary_photo %><br>
 <%= attach_image_link @store %><br>
 <%= lists @store %><hr>
 <%= attachable_sites @store %>
-<%= follow_link @store %>
-<h2>find this store at these locations</h2>
+
+<h2>find this store at these <%= link_to pluralize(@store.locations.count, 'location'), store_locations_path(@store) %></h2>
 <% @store.locations.each do |l| %>
   <%= link_to l.address.street + ' ' + (l.address.city ? l.address.city.name : ''), l %><br>
 <% end %>
-<%= link_to 'add a location', new_store_location_path(@store) if current_user.is_authorized_to_create_locations_of(@store) %><br>
-<%= link_to 'these locations', store_locations_path(@store) %>
 
-<%= link_to 'edit', edit_store_path(@store) if current_user.authorized_to_authorize(@store) %> |
-<%= link_to 'stores', stores_path %>
-<%= link_to_backup %>
+
+
+<h2><%= 'admin' if current_user.authorized_to_authorize(@store) %></h2>
+<%= link_to 'add a location', new_store_location_path(@store) if current_user.is_authorized_to_create_locations_of(@store) %><br>
+<%= link_to 'edit', edit_store_path(@store) if current_user.authorized_to_authorize(@store) %><br>
+<%= authorize_links nil, @store if current_user.authorized_to_authorize(@store) %>
