--- a/app/views/website_uses/index.html.erb
+++ b/app/views/website_uses/index.html.erb
@@ -2,9 +2,9 @@
 
 <table>
   <tr>
-    <th>Target type</th>
-    <th>Target</th>
-    <th>Website</th>
+    <th>target type</th>
+    <th>target</th>
+    <th>website</th>
   </tr>
 
 <% for website_use in @website_uses %>
