--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -4,14 +4,12 @@
   <tr>
     <th>Product</th>
     <th>Location</th>
-    <th>Stock</th>
   </tr>
 
 <% for offering in @offerings %>
   <tr>
-    <td><%= link_to offering.product.name, offering.product %></td>
-    <td><%= link_to offering.location.store.name, offering.location %></td>
-    <td><%=h offering.stock %></td>
+    <td><%= link_to_name offering.product %></td>
+    <td><%= link_to_name offering.location %></td>
     <td><%= link_to 'show', offering %></td>
     <td><%= link_to 'edit', edit_offering_path(offering) if current_user.is_authorized_to_edit_offerings_at(offering.location_id) %></td>
   </tr>
