--- a/app/views/styles/edit.html.erb
+++ b/app/views/styles/edit.html.erb
@@ -1,28 +1,17 @@
-<h1>Editing style</h1>
+<h1>editing style for <%= @style.product.name %></h1>
 
-<% form_for(@style) do |f| %>
+<% form_for @style do |f| %>
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :size %><br />
-    <%= f.text_field :size %>
+    <%= f.text_field :size %><%= f.label :size, 'size' %>
   </p>
   <p>
-    <%= f.label :traits %><br />
-    <%= f.text_field :traits %>
+    <%= f.text_area :traits, :size => '30x4' %><%= f.label :traits, 'description' %>
   </p>
   <p>
-    <%= f.label :product_id %><br />
-    <%= f.text_field :product_id %>
-  </p>
-  <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </p>
-  <p>
-    <%= f.submit "Update" %>
+    <%= f.submit "update" %>
   </p>
 <% end %>
 
-<%= link_to 'Show', @style %> |
-<%= link_to 'Back', styles_path %>
+<%= link_to 'show', @style %>
