--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -1,23 +1,20 @@
-<h1>New stock</h1>
+<h1>what's in stock</h1>
 
-<% form_for(@stock) do |f| %>
+<% form_for @stock do |f| %>
   <%= f.error_messages %>
 
+	<% if @stock.offering %>
+	  <%= f.hidden_field :offering_id %>
+	<% else%>
   <p>
-    <%= f.label :offering_id %><br />
-    <%= f.text_field :offering_id %>
+    <%= f.select :offering_id, Offering.map_name_and_id %><%= f.label :offering_id, 'offering' %>
   </p>
+	<% end %>
   <p>
-    <%= f.label :style_id %><br />
-    <%= f.text_field :style_id %>
+    <%= f.select :style_id, Style.map_name_and_id %><%= f.label :style_id, 'style' %>
   </p>
-  <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </p>
-  <p>
-    <%= f.submit "Create" %>
+	<p>
+		how many?	<%= text_field :how, :many, :size => 3 %> in 
+    <%= f.submit "stock" %>
   </p>
 <% end %>
-
-<%= link_to 'Back', stocks_path %>
